@@ -5,6 +5,9 @@ Changes for Crate
 Unreleased
 ==========
 
+ - Fix: Querying from information_schema while a table is created could
+   cause an error
+
  - Fixed a NPE that was thrown if a SELECT statement contained `_score` in the
    result columns and an ORDER BY clause.
 
